cli/tests/snapshots/help__btrfs_tune.snap
---
source: cli/tests/help.rs
expression: text
---
Modify btrfs filesystem parameters on an unmounted device by writing directly to
the on-disk superblock and tree structures.

Operations are grouped into feature flags, UUID changes, and seeding. Only one
group may be used per invocation. The legacy feature flags (-r, -x, -n) can be
combined with each other but not with other groups.

The legacy feature flags enable on-disk format features that were once optional
but are now enabled by default on all new filesystems created by mkfs.btrfs.
They exist for upgrading old filesystems in place.

Usage: tune [OPTIONS] <DEVICE>

Arguments:
  <DEVICE>
          Path to the btrfs device

Options:
  -f, --force
          Allow dangerous operations without confirmation

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Legacy feature flags:
  -r
          Enable extended inode refs (extref)

  -x
          Enable skinny metadata extent refs

  -n
          Enable no-holes feature

UUID:
  -m
          Change fsid to a random UUID via the metadata_uuid mechanism

  -M <UUID>
          Change fsid to the given UUID via the metadata_uuid mechanism

  -u
          Rewrite fsid to a random UUID (rewrites all tree block headers)

  -U <UUID>
          Rewrite fsid to the given UUID (rewrites all tree block headers)

Seeding:
  -S <SEEDING>
          Set (1) or clear (0) the seeding flag
